--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-pandas
-numpy
-scikit-learn
-tqdm
-ipython
-biopython
-lightgbm
-tensorflow
-matplotlib
-torch
+tqdm==4.66.4
+numpy==1.23.5
+pandas==2.2.2
+tensorflow==2.10.0
+scikit-learn==1.5.0
+biopython==1.83
+matplotlib==3.8.4
