--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,14 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "biopython>=1.86",
+    "ipykernel>=7.1.0",
     "matplotlib>=3.10.7",
     "numpy>=2.3.5",
+    "obonet>=1.1.1",
     "pandas>=2.3.3",
     "regex>=2025.11.3",
     "scikit-learn>=1.7.2",
+    "seaborn>=0.13.2",
     "tensorflow>=2.20.0",
     "torch>=2.9.1",
     "tqdm>=4.67.1",
