--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "seaborn>=0.13.2",
     "sentence-transformers>=5.1.2",
     "tensorflow>=2.20.0",
+    "tf-keras>=2.20.1",
     "torch>=2.9.1",
     "tqdm>=4.67.1",
     "transformers>=4.57.3",
