--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "ete3>=3.1.3",
     "ipykernel>=7.1.0",
     "matplotlib>=3.10.7",
+    "networkx>=3.6",
     "numpy>=2.3.5",
     "obonet>=1.1.1",
     "pandas>=2.3.3",
