--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ name = "cafa-6-protein-function-prediction-kaggle"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12, <3.13"
 dependencies = [
-    "biopython>=1.86",
+    "biopython>=1.80",
     "datasets>=4.4.1",
     "ete3>=3.1.3",
     "ipykernel>=7.1.0",
@@ -21,6 +21,8 @@ dependencies = [
     "tensorflow>=2.20.0",
     "tf-keras>=2.20.1",
     "torch>=2.9.1",
+    "torchaudio>=2.9.1",
+    "torchvision>=0.24.1",
     "tqdm>=4.67.1",
     "transformers>=4.57.3",
 ]
